--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.31.0
-pandas==2.2.1
-numpy==1.26.4
-scikit-learn==1.4.1.post1
-plotly==5.19.0
+streamlit
+pandas
+numpy
+scikit-learn
+plotly
 
 
 
@@ -11,3 +11,4 @@ plotly==5.19.0
 # pandas
 # numpy
 # matplotlib
+
